Creacion del formulario para registrar una matrícula

--- a/WindowsFormsApp1/DAL/DAL.csproj
+++ b/WindowsFormsApp1/DAL/DAL.csproj
@@ -49,6 +49,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="dalEstudiantes.cs" />
+    <Compile Include="dalMatricula.cs" />
     <Compile Include="ESTUDIANTE.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
