Se creo los datos de Pensiones

--- a/WindowsFormsApp1/DAL/DAL.csproj
+++ b/WindowsFormsApp1/DAL/DAL.csproj
@@ -50,6 +50,7 @@
   <ItemGroup>
     <Compile Include="dalEstudiantes.cs" />
     <Compile Include="dalMatricula.cs" />
+    <Compile Include="dalPension.cs" />
     <Compile Include="ESTUDIANTE.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
