--- a/WindowsFormsApp1/comun/comun.csproj
+++ b/WindowsFormsApp1/comun/comun.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CEstudiantes.cs" />
+    <Compile Include="CPension.cs" />
     <Compile Include="CMatricula.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
