--- a/WindowsFormsApp1/WindowsFormsApp1/WPL.csproj
+++ b/WindowsFormsApp1/WindowsFormsApp1/WPL.csproj
@@ -84,6 +84,7 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <None Include="App.Config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -95,15 +96,12 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
-  </ItemGroup>
-  <ItemGroup>
     <ProjectReference Include="..\comun\comun.csproj">
       <Project>{89eff972-7322-45fb-9d8d-a520b7b6d137}</Project>
       <Name>comun</Name>
     </ProjectReference>
     <ProjectReference Include="..\DAL\DAL.csproj">
-      <Project>{92b053dd-f615-42dd-a261-348135193a41}</Project>
+      <Project>{ce7930a4-5fa2-4c5e-91f8-2834d8a35ac0}</Project>
       <Name>DAL</Name>
     </ProjectReference>
   </ItemGroup>
